Added Rock/Paper/Scissors button, score counter, and round announce

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+<button class="btn1" id="rock">Rock</button>
+<button class="btn1" id="paper">Paper</button>
+<button class="btn1" id="scissors">Scissors</button>
+
+<div id="container"></div>
 
 <script src="scripts/script.js">
-
-
 </script>
 
 </body>
